--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -77,6 +77,13 @@
   --button-disabled-border-color-rest: var(--color-background-disabled);
   --button-disabled-foreground-color-rest: var(--color-foreground-disabled);
 
+  --button-constraint-background-color-rest: var(--color-foreground-secondary);
+  --button-constraint-border-color-rest: var(--color-background-tertiary);
+  --button-constraint-border-color-hover: var(--color-accent-primary-muted);
+  --button-constraint-background-color-hover: var(--color-accent-primary);
+  --constraint-widget-background-color: var(--color-background-tertiary);
+  --constraint-center-area-background-color: var(--color-background-primary);
+
   --icon-foreground: var(--color-foreground-secondary);
   --icon-foreground-hover: var(--color-foreground-primary);
 
@@ -111,18 +118,19 @@
   --search-bar-input-border-color: var(--color-background-tertiary);
 
   --input-background-color: var(--color-background-tertiary);
-  --input-background-color-active: var(--color-background-primary);
+  --input-foreground-color: var(--color-foreground-secondary);
+  --input-placeholder-color: var(--color-foreground-secondary);
   --input-background-color-hover: var(--color-background-quaternary);
   --input-background-color-focus: var(--color-background-tertiary);
-  --input-background-color-disabled: var(--color-background-primary);
-  --input-placeholder-color: var(--color-foreground-secondary);
-  --input-foreground-color: var(--color-foreground-secondary);
-  --input-foreground-color-active: var(--color-foreground-primary);
-  --input-foreground-color-disabled: var(--color-foreground-secondary);
-  --input-border-color-active: var(--color-accent-primary);
-  --input-border-color-disabled: var(--color-background-quaternary);
-  --input-border-outline-color-active: var(--color-accent-primary-muted);
   --input-border-color-focus: var(--color-accent-primary);
+  --input-background-color-active: var(--color-background-primary);
+  --input-foreground-color-active: var(--color-foreground-primary);
+  --input-border-outline-color-active: var(--color-accent-primary-muted);
+  --input-border-color-active: var(--color-accent-primary);
+  --input-background-color-disabled: var(--color-background-primary);
+  --input-foreground-color-disabled: var(--color-foreground-secondary);
+  --input-border-color-disabled: var(--color-background-quaternary);
+  --input-details-color: var(--color-background-primary);
 
   --pill-background-color: var(--color-background-tertiary);
   --pill-foreground-color: var(--color-foreground-primary);
@@ -130,17 +138,20 @@
   --menu-background-color: var(--color-background-tertiary);
   --menu-foreground-color: var(--color-foreground-primary);
   --menu-background-color-selected: var(--color-background-tertiary);
-  --menu-foreground-color-selected: var(--color-foreground-primary);
   --menu-background-color-hover: var(--color-background-quaternary);
   --menu-foreground-color-hover: var(--color-foreground-primary);
   --menu-background-color-focus: var(--color-background-tertiary);
   --menu-foreground-color-focus: var(--color-foreground-primary);
+  --menu-foreground-color-rest: var(--color-foreground-secondary);
   --menu-border-color-focus: var(--color-accent-primary);
   --menu-shortcut-background-color: var(--color-background-primary);
   --menu-shortcut-foreground-color: var(--color-foreground-secondary);
   --menu-shortcut-foreground-color-selected: var(--color-foreground-primary);
   --menu-shortcut-foreground-color-hover: var(--color-foreground-primary);
   --menu-shadow-color: var(--color-background-subtle);
+  --menu-background-color-disabled: var(--color-background-primary);
+  --menu-foreground-color-disabled: var(--color-foreground-secondary);
+  --menu-border-color-disabled: var(--color-background-quaternary);
 
   --tag-background-color: var(--color-accent-primary);
 
@@ -210,4 +221,8 @@
   --modal-background-color: var(--color-background-primary);
   --modal-foreground-color: var(--color-foreground-primary);
   --modal-foreground-color-secondary: var(--color-foreground-secondary);
+
+  --colorpicker-details-color: var(--color-background-quaternary);
+  --colorpicker-details-color-selected: var(--color-accent-primary);
+  --colorpicker-handlers-color: var(--color-foreground-primary);
 }
