--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -50,27 +50,11 @@
             width: $s-92;
           }
         }
-        &.wrap {
-        }
       }
       .z-index-wrapper {
         @extend .input-element;
         width: $s-124;
         padding-left: $s-8;
-        .icon-text {
-          @include flexCenter;
-          height: $s-32;
-          margin-right: $s-4;
-          padding-top: $s-2;
-        }
-        .numeric-input {
-          @include removeInputStyle;
-          @include titleTipography;
-          height: $s-32;
-          width: 100%;
-          margin: 0;
-          color: var(--input-foreground-color-active);
-        }
       }
     }
     .second-row {
@@ -107,23 +91,6 @@
               @extend .input-element;
               width: $s-108;
               padding-left: $s-8;
-              .icon {
-                @include flexCenter;
-                height: $s-32;
-                margin-right: $s-4;
-                svg {
-                  @extend .button-icon-small;
-                  stroke: var(--icon-foreground);
-                }
-              }
-              .numeric-input {
-                @include removeInputStyle;
-                @include titleTipography;
-                height: $s-32;
-                width: 100%;
-                margin: 0;
-                color: var(--input-foreground-color-active);
-              }
             }
           }
           .margin-multiple {
@@ -137,23 +104,6 @@
               @extend .input-element;
               width: $s-108;
               padding-left: $s-8;
-              .icon {
-                @include flexCenter;
-                height: $s-32;
-                margin-right: $s-4;
-                svg {
-                  @extend .button-icon-small;
-                  stroke: var(--icon-foreground);
-                }
-              }
-              .numeric-input {
-                @include removeInputStyle;
-                @include titleTipography;
-                height: $s-32;
-                width: 100%;
-                margin: 0;
-                color: var(--input-foreground-color-active);
-              }
             }
           }
         }
@@ -176,20 +126,9 @@
           width: $s-108;
           padding-left: $s-8;
           .icon-text {
-            display: flex;
-            align-items: center;
-            height: $s-32;
+            justify-content: flex-start;
             width: $s-80;
-            margin-right: $s-4;
             padding-top: $s-2;
-          }
-          .numeric-input {
-            @include removeInputStyle;
-            @include titleTipography;
-            height: $s-32;
-            width: 100%;
-            margin: 0;
-            color: var(--input-foreground-color-active);
           }
         }
       }
