--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -14,6 +14,8 @@
   --panel-background-color: var(--color-background-primary);
   --panel-title-background-color: var(--color-background-secondary);
 
+  // BUTTONS
+
   --button-foreground-hover: var(--color-accent-primary);
   --button-background-focus: var(--color-background-secondary);
   --button-foreground-focus: var(--color-foreground-primary);
@@ -84,6 +86,7 @@
   --constraint-widget-background-color: var(--color-background-tertiary);
   --constraint-center-area-background-color: var(--color-background-primary);
 
+  // ICONS
   --icon-foreground: var(--color-foreground-secondary);
   --icon-foreground-hover: var(--color-foreground-primary);
 
