--- a/frontend/src/app/main/ui/components/select.scss
+++ b/frontend/src/app/main/ui/components/select.scss
@@ -24,6 +24,16 @@
     width: 100%;
     flex-grow: 1;
   }
+  .current-icon {
+    @include flexCenter;
+    height: $s-24;
+    width: $s-24;
+    padding-right: $s-4;
+    svg {
+      @extend .button-icon;
+      stroke: var(--icon-foreground);
+    }
+  }
   .dropdown-button {
     @include flexCenter;
     svg {
@@ -41,6 +51,17 @@
   }
   .checked-element {
     @extend .dropdown-element-base;
+
+    .icon {
+      @include flexCenter;
+      height: $s-24;
+      width: $s-24;
+      padding-right: $s-4;
+      svg {
+        @extend .button-icon;
+        stroke: var(--icon-foreground);
+      }
+    }
 
     .label {
       flex-grow: 1;
