--- a/frontend/src/app/main/ui/workspace/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar.scss
@@ -26,6 +26,19 @@ $width-settings-bar-max: $s-500;
     height: calc(100vh - $s-52);
     cursor: ew-resize;
   }
+  .resize-area-horiz {
+    position: absolute;
+    top: calc($s-80 + var(--height, 200px));
+    left: 0;
+    width: 100%;
+    height: $s-12;
+    border-top: 2px solid var(--color-background-secondary);
+    background-color: var(--color-background-primary);
+    cursor: ns-resize;
+    &:hover {
+      border-color: var(--color-background-quaternary);
+    }
+  }
   .settings-bar-inside {
     display: grid;
     grid-template-columns: 100%;
@@ -42,8 +55,8 @@ $width-settings-bar-max: $s-500;
     }
   }
 }
-:global(.tab-spacing) {
-  margin: $s-4 $s-8 0 $s-8;
+.tab-spacing {
+  margin: $s-4 $s-12 0 $s-12;
 }
 .right-settings-bar {
   grid-area: right-sidebar;
