--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -9,7 +9,7 @@
 .element-set {
   .element-title {
     .title-spacing-layout {
-      margin: 0;
+      padding-left: $s-12;
     }
 
     .title-actions {
