--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_item.scss
@@ -14,6 +14,9 @@
         width: $s-140;
       }
     }
+    .title-spacing-empty {
+      padding-left: $s-12;
+    }
   }
   .flex-element-menu {
     display: flex;
