--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/blur.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/blur.scss
@@ -8,6 +8,9 @@
 
 .element-set {
   .element-title {
+    .title-spacing-blur {
+      padding-left: $s-12;
+    }
     .add-blur {
       @extend .button-tertiary;
       height: $s-32;
