--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/svg_attrs.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/svg_attrs.scss
@@ -7,6 +7,9 @@
 @import "refactor/common-refactor.scss";
 
 .element-set {
+  .title-spacing-svg-attrs {
+    padding-left: $s-12;
+  }
   .element-set-content {
     display: flex;
     flex-direction: column;
