--- a/frontend/src/app/main/ui/components/color_bullet_new.scss
+++ b/frontend/src/app/main/ui/components/color_bullet_new.scss
@@ -29,7 +29,6 @@
   &.is-not-library-color {
     overflow: hidden;
     border-radius: $br-8;
-
     & .color-bullet-wrapper {
       clip-path: none;
     }
@@ -59,6 +58,9 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-bullet-background-color);
+  }
+  &:hover {
+    border: $s-2 solid var(--color-bullet-border-color-selected);
   }
 }
 
