--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
@@ -20,17 +20,14 @@
     width: 100%;
     flex-grow: 1;
     .color-name-wrapper {
-      display: flex;
-      align-items: center;
-      border-radius: $br-8;
-      background-color: var(--input-background-color);
+      @extend .input-element;
       flex-grow: 1;
-
+      border-radius: $br-8 0 0 $br-8;
       .color-bullet-wrapper {
-        @extend .input-element;
-        background-color: transparent;
-        border-radius: $br-8 0 0 $br-8;
+        height: $s-28;
         padding: 0 $s-4 0 $s-8;
+        border-radius: $br-8 0 0 $br-8;
+        background-color: transparent;
         &:hover {
           background-color: transparent;
         }
@@ -53,12 +50,18 @@
         }
       }
       .color-input-wrapper {
-        @extend .input-element;
+        @include titleTipography;
+        display: flex;
+        align-items: center;
+        height: $s-28;
+        padding: 0 $s-0;
+        margin: 0;
+        background-color: var(--input-background-color);
+        color: var(--input-foreground-color);
         border-radius: $br-0;
       }
-      &:hover,
-      &:focus,
-      &:focus-within {
+      &:hover{
+        background-color: var(--input-background-color-hover);
         .color-bullet-wrapper,
         .color-name,
         .detach-btn,
@@ -68,6 +71,23 @@
         .detach-btn svg {
           stroke: var(--input-foreground-color-active);
         }
+        &.editing {
+          background-color: var(--input-background-color-active);
+          .color-bullet-wrapper,
+          .color-name,
+          .detach-btn,
+          .color-input-wrapper {
+            background-color: var(--input-background-color-active);
+          }
+        }
+      }
+      &:focus,
+      &:focus-within {
+        background-color: var(--input-background-color-active);
+      }
+
+      &.editing {
+        background-color: var(--input-background-color-active);
       }
     }
     .gradient-name-wrapper {
