--- a/frontend/src/app/main/ui/components/color_bullet_new.scss
+++ b/frontend/src/app/main/ui/components/color_bullet_new.scss
@@ -22,6 +22,8 @@
   &.mini {
     width: var(--bullet-size, $s-16);
     height: var(--bullet-size, $s-16);
+    min-width: var(--bullet-size, $s-16);
+    min-height: var(--bullet-size, $s-16);
     margin-top: 0;
     border: 1px solid var(--color-bullet-border-color);
   }
